--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,9 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
+android/app/build
+./android/app/build
+.android/app/build
 
 # Gatsby files
 .cache/
